# TestNdkPro

./: gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/marson/testndkpro/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: SignatureVerification.cpp  SignatureVerification.h  aes.h  base64.h  cryptopp_aes.cpp  my_first_jni.cpp  my_first_jni.h  stdafx.h
app/src/main/java/com/marson/testndkpro/: MainActivity.java
app/src/main/java/com/marson/testndkpro/jni/: TestJNi.java
app/src/main/java/com/marson/testndkpro/utils/: Coder.java  RSACoder.java  SignatureUtil.java  Test.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/marson/testndkpro/: ExampleUnitTest.java
